--- a/companies/templates/admin/base_site.html
+++ b/companies/templates/admin/base_site.html
@@ -1,11 +1,11 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | Tooba Admin{% endblock %}
+{% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | Круг добра Admin{% endblock %}
 
 {% block branding %}
 <h1 id="site-name">
     <a href="{% url 'admin:index' %}">
-        Tooba
+        Круг добра
     </a>
 </h1>
 {% endblock %}
