--- a/companies/templates/companies/apply_success.html
+++ b/companies/templates/companies/apply_success.html
@@ -1,6 +1,6 @@
 {% extends 'companies/base.html' %}
 
-{% block title %}Заявка отправлена - Tooba{% endblock %}
+{% block title %}Заявка отправлена - Круг добра{% endblock %}
 
 {% block content %}
 <div class="success-container">
@@ -12,7 +12,7 @@
         <h1 class="success-title">Заявка успешно отправлена!</h1>
         
         <p class="success-message">
-            Спасибо за ваш интерес к платформе Tooba. Мы получили вашу заявку и рассмотрим её в течение 2-3 рабочих дней.
+            Спасибо за ваш интерес к платформе "Круг добра". Мы получили вашу заявку и рассмотрим её в течение 2-3 рабочих дней.
         </p>
         
         <div class="next-steps">
@@ -38,7 +38,7 @@
                     <div class="step-number">3</div>
                     <div class="step-content">
                         <h4>Публикация</h4>
-                        <p>После одобрения ваша компания появится в каталоге Tooba</p>
+                        <p>После одобрения ваша компания появится в каталоге "Круг добра"</p>
                     </div>
                 </div>
             </div>
